--- a/src/assets/scss/pages/_welcome.scss
+++ b/src/assets/scss/pages/_welcome.scss
@@ -1,5 +1,20 @@
 .welcome {
-
+    .container {
+        margin-top: -30px;
+    }
+    .main-coca {
+        width: 150px;
+        margin-bottom: -25px;
+        margin-left: 15px;
+    }
+    .main-banner {
+        width: 370px;
+    }
+    &__header {
+        color: white;
+        font-size: 28px;
+        margin-bottom: 25px;
+    }
     .floating-img {
         position: absolute;
     
