Add family reuinion text to screen

--- a/src/assets/scss/pages/_welcome.scss
+++ b/src/assets/scss/pages/_welcome.scss
@@ -12,7 +12,7 @@
     }
     &__header {
         color: white;
-        font-size: 28px;
+        font-size: 24px;
         margin-bottom: 25px;
     }
     .floating-img {
@@ -66,4 +66,11 @@
             width: 130px;
         }
     }
+}
+
+.family_text{
+    font-size: 28px;
+    font-weight: bold;
+    color: #fff;
+    margin-top: -54px;
 }
