css changes and social screen

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -8,5 +8,6 @@
 @import "./pages/welcome";
 @import "./pages/login";
 @import "./pages/players";
+@import "./pages/social";
 
 @import "./cmpnts/components"
