--- a/src/assets/scss/pages/_login.scss
+++ b/src/assets/scss/pages/_login.scss
@@ -1,11 +1,6 @@
 .login {
     .img-container {
-        margin-top: -180px;
-    }
-    .main-coca {
-        width: 150px;
-        margin-bottom: -25px;
-        margin-left: 15px;
+        margin: -180px 0 20px;
     }
     .main-banner {
         width: 370px;
