--- a/src/assets/scss/pages/_welcome.scss
+++ b/src/assets/scss/pages/_welcome.scss
@@ -2,11 +2,6 @@
     .container {
         margin-top: -30px;
     }
-    .main-coca {
-        width: 150px;
-        margin-bottom: -25px;
-        margin-left: 15px;
-    }
     .main-banner {
         width: 370px;
     }
@@ -15,8 +10,17 @@
         font-size: 24px;
         margin-bottom: 25px;
     }
+    &__text {
+        color: white;
+        font-size: 22px;
+        font-weight: 600;
+        margin: 25px 0 20px;
+        text-align: center;
+        max-width: 340px;
+    }
     .floating-img {
         position: absolute;
+        z-index: -1;
     
         &--1 {
             top: 60px;
@@ -32,7 +36,7 @@
     
         &--3 {
             top: 35px;
-            right: 70px;
+            right: 60px;
             width: 58px;
         }
     
