--- a/src/assets/scss/pages/_welcome.scss
+++ b/src/assets/scss/pages/_welcome.scss
@@ -4,7 +4,9 @@
     }
     .main-banner {
         width: 370px;
+        margin-bottom: 20px;
     }
+
     &__header {
         color: white;
         font-size: 24px;
@@ -14,7 +16,7 @@
         color: white;
         font-size: 22px;
         font-weight: 600;
-        margin: 25px 0 20px;
+        margin-bottom: 30px;
         text-align: center;
         max-width: 340px;
     }
