red background color for html

--- a/src/assets/scss/base/_base.scss
+++ b/src/assets/scss/base/_base.scss
@@ -3,6 +3,10 @@
     padding: 0;
     box-sizing: border-box;
 }
+html {
+    background-color: #A92D1D;
+    
+}
 body {
     background: url(../../img/bg.png);
     background-size: cover;
