--- a/src/assets/scss/pages/_social.scss
+++ b/src/assets/scss/pages/_social.scss
@@ -4,10 +4,12 @@
     .main-banner {
         width: 370px;
         margin-bottom: 30px;
+        z-index: 5;
     }
 
     .link-container {
         margin: 30px 0;
+        z-index: 5;
     }
 
     &__header {
@@ -25,7 +27,6 @@
 
     .link {
         transition: transform .2s ease-out;
-
         &:first-child {
             margin-right: 20px;
         }
@@ -49,38 +50,32 @@
     
         &--2 {
             bottom: 85px;
-            right: 130px;
+            right: 160px;
             width: 30px;
         }
     
         &--3 {
             top: 30px;
             right: 10px;
-            width: 58px;
+            width: 45px;
         }
     
         &--4 {
             bottom: 185px;
             left: 20px;
-            width: 58px;
+            width: 45px;
         }
     
         &--5 {
             bottom: 140px;
             right: 25px;
-            width: 90px;
+            width: 65px;
         }
     
         &--6 {
             bottom: 100px;
             left: 25px;
-            width: 150px;
-        }
-    
-        &--7 {
-            top: 140px;
-            right: 5px;
-            width: 130px;
+            width: 80px;
         }
     }
 }
