change for CI warning

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -10,4 +10,10 @@
 @import "./pages/players";
 @import "./pages/social";
 
-@import "./cmpnts/components"
+@import "./cmpnts/components";
+
+.Toastify__toast {
+    border-radius: 30px;
+    opacity: .85;
+    text-align: center;
+}
