--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -9,6 +9,8 @@
 @import "./pages/login";
 @import "./pages/players";
 @import "./pages/social";
+@import "./pages/camera";
+@import "./pages/questionOverlay";
 
 @import "./cmpnts/components";
 
