--- a/src/assets/scss/pages/_camera.scss
+++ b/src/assets/scss/pages/_camera.scss
@@ -1,10 +1,18 @@
 .camera {
+    position: relative;
     min-height: 100vh;
     min-width: 320px;
     max-width: 768px;
     margin: 0 auto;
+    overflow: hidden;
     // background-image: url(../../img/photo-3.jpeg);
     // background-repeat: no-repeat;
     // background-size: cover;
-    // background-position: 50% 50%;   
+    // background-position: 50% 50%;
+
+    .video-tag {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+    }
 }
