--- a/src/assets/scss/pages/_login.scss
+++ b/src/assets/scss/pages/_login.scss
@@ -44,8 +44,14 @@
             margin-right: 10px;
 
             &--phone {
-                margin-right: 13px;
-                max-width: 94px;
+                margin-right: 7px;
+            }
+
+            @media(max-width: 768px) {
+                &--phone {
+                    margin-right: -3px;
+                    max-width: 94px;
+                }
             }
         }
 
