start path routing && recaptcha error fix

--- a/src/assets/scss/pages/_questionOverlay.scss
+++ b/src/assets/scss/pages/_questionOverlay.scss
@@ -22,7 +22,7 @@
             text-align: center;
             z-index: 20;
             position: relative;
-            // text-shadow: 0 0 27px $main-red;
+            // text-shadow: 10px 0 7px $main-red;
         }
 
         .btn-group {
