--- a/src/assets/scss/pages/_questionOverlay.scss
+++ b/src/assets/scss/pages/_questionOverlay.scss
@@ -1,81 +1,90 @@
-    .main-overlay {
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
+.main-overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 10;
+    padding: 80px 10px;
+    background-color: rgba(black, .15);
+
+    .header {
+        color: $main-red;
+        max-width: 600px;
+        text-align: center;
+        margin: 0 auto 40px;
+        z-index: 20;
+        text-shadow: 0 0 10px rgba(white, .8);
+    }
+
+    .question {
+        max-width: 600px;
+        text-transform: uppercase;
+        color: transparent;
+        background: linear-gradient(to right, #C99124 5%, #F6DA67 25%, #F6DA67 80%, #C99124 100%);
+        background-clip: text;
+        -webkit-background-clip: text;
+        font-weight: 900;
+        margin: 0 auto 40px;
+        font-size: 30px;
+        transform: rotate(-2deg);
+        text-align: center;
+        z-index: 20;
+        position: relative;
+        // text-shadow: 10px 0 7px $main-red;
+    }
+
+    .btn-group {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
         z-index: 10;
-        padding: 80px 10px;
-        background-color: rgba(black, .15);
+    }
 
-        .question {
-            max-width: 600px;
-            text-transform: uppercase;
-            color: transparent;
-            background: linear-gradient(to right, #C99124 5%, #F6DA67 25%, #F6DA67 80%, #C99124 100%);
-            background-clip: text;
-            -webkit-background-clip: text;
-            font-weight: 900;
-            margin: 0 auto 40px;
-            font-size: 30px;
-            transform: rotate(-2deg);
-            text-align: center;
-            z-index: 20;
-            position: relative;
-            // text-shadow: 10px 0 7px $main-red;
+    .floating-img {
+        position: absolute;
+    
+        &--1 {
+            top: 35px;
+            left: 50px;
+            width: 30px;
         }
-
-        .btn-group {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            z-index: 10;
+    
+        &--2 {
+            bottom: 50%;
+            left: 20px;
+            width: 35px;
         }
-
-        .floating-img {
-            position: absolute;
-        
-            &--1 {
-                top: 35px;
-                left: 50px;
-                width: 30px;
-            }
-        
-            &--2 {
-                bottom: 50%;
-                left: 20px;
-                width: 35px;
-            }
-        
-            &--3 {
-                bottom: 80px;
-                left: 120px;
-                width: 40px;
-            }
-        
-            &--4 {
-                bottom: 45px;
-                left: 10px;
-                width: 120px;
-            }
-        
-            &--5 {
-                bottom: 50px;
-                right: 20px;
-                width: 60px;
-                transform: rotate(50deg);
-            }
-        
-            &--6 {
-                bottom: 50%;
-                right: 20px;
-                width: 30px;
-            }
-        
-            &--7 {
-                top: 20px;
-                right: 60px;
-                width: 40px;
-            }
+    
+        &--3 {
+            bottom: 80px;
+            left: 120px;
+            width: 40px;
+        }
+    
+        &--4 {
+            bottom: 45px;
+            left: 10px;
+            width: 120px;
+        }
+    
+        &--5 {
+            bottom: 50px;
+            right: 20px;
+            width: 60px;
+            transform: rotate(50deg);
+        }
+    
+        &--6 {
+            bottom: 50%;
+            right: 20px;
+            width: 30px;
+        }
+    
+        &--7 {
+            top: 20px;
+            right: 60px;
+            width: 40px;
         }
     }
+}
