start nav bar and add audio autoplay

--- a/src/assets/scss/base/_base.scss
+++ b/src/assets/scss/base/_base.scss
@@ -16,6 +16,10 @@ body {
 .page {
     position: relative;
     min-height: 100vh;
+}
+
+.app {
+    position: relative;
     min-width: 320px;
     max-width: 768px;
     margin: 0 auto;
