--- a/src/assets/scss/abstracts/_animations.scss
+++ b/src/assets/scss/abstracts/_animations.scss
@@ -35,4 +35,24 @@
     to {
       transform: rotate(360deg);
     }
-  }
+}
+
+@keyframes bounce {
+    0% {
+        transform: scale(1);
+    }
+    25% {
+        transform: scale(1.35);
+        
+    }
+    50% {
+        transform: scale(1);
+        
+    }
+    75% {
+        transform: scale(1.35);
+    }
+    100% {
+        transform: scale(1);
+    }
+}
