--- a/src/assets/scss/abstracts/_utilities.scss
+++ b/src/assets/scss/abstracts/_utilities.scss
@@ -11,6 +11,10 @@
     justify-content: center;
 }
 
+.just-between {
+    justify-content: space-between;
+}
+
 .just-start {
     justify-content: flex-start;
 }
