--- a/src/assets/scss/cmpnts/_components.scss
+++ b/src/assets/scss/cmpnts/_components.scss
@@ -37,3 +37,24 @@
         transform: scale(0.97)
     }
 }
+
+.navbar {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    padding: 30px 30px;
+    z-index: 20;
+
+    &__logo {
+        width: 100px;
+    }
+
+    &__actions {
+        // display: ;
+    }
+}
+
+.bounce {
+    animation: bounce 2.5s ease-in-out;
+}
