start new designs

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -10,6 +10,8 @@
 @import "./pages/players";
 @import "./pages/social";
 @import "./pages/camera";
+@import "./pages/guide";
+@import "./pages/score";
 @import "./pages/questionOverlay";
 
 @import "./cmpnts/components";
