--- a/src/assets/scss/cmpnts/_components.scss
+++ b/src/assets/scss/cmpnts/_components.scss
@@ -49,16 +49,9 @@
     &__logo {
         width: 100px;
     }
-
-    &__actions {
-        // display: ;
-    }
 }
 
 .menu {
-    position: absolute;
-    top: 70px;
-    right: 35px;
     z-index: 55;
     background-color: #a8161c;
     padding: 5px 0;
@@ -75,8 +68,10 @@
     
     &__item {
         color: white;
-        padding: 5px 12px;
+        padding: 6px 12px;
+        text-decoration: none;
         transition: all .2s;
+        outline: none;
 
         &:hover, &:active {
             color: #ccc;
@@ -84,6 +79,41 @@
     }
 }
 
+.popup-content.menu-popup-content {
+    padding: 0;
+    border: none;
+
+    div:first-child {
+        display: none;
+    }
+}
+
 .bounce {
     animation: bounce 2.5s ease-in-out;
+}
+
+.footer {
+    position: relative;
+    bottom: 0;
+    background-color: #333;
+    color: #ddd;
+    font-size: 12px;
+    padding: 12px 15px 18px;
+}
+
+.ackno {
+    padding: 5px;
+    background-color: #C99124;
+    background: linear-gradient(to right, #C99124 5%, #F6DA67 25%, #F6DA67 80%, #C99124 100%);
+    opacity: .3;
+
+    &__inner {
+        padding: 30px 10px;
+        background-image: $main-red;
+    }
+
+    p {
+        color: white;
+        font-size: 20px;
+    }
 }
