--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -12,6 +12,10 @@
 @import "./pages/camera";
 @import "./pages/guide";
 @import "./pages/score";
+@import "./pages/winners";
+@import "./pages/prizes";
+@import "./pages/terms";
+@import "./pages/sharetowin";
 @import "./pages/questionOverlay";
 
 @import "./cmpnts/components";
