--- a/src/assets/scss/pages/_score.scss
+++ b/src/assets/scss/pages/_score.scss
@@ -1,3 +1,131 @@
 .score {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-top: 80px;
+
+    &__header {
+        text-transform: uppercase;
+        color: transparent;
+        background: linear-gradient(to right, #C99124 5%, #F6DA67 25%, #F6DA67 80%, #C99124 100%);
+        background-clip: text;
+        -webkit-background-clip: text;
+        font-weight: 900;
+        margin-bottom: 60px;
+        font-size: 22px;
+        text-align: center;
+    }
+
+    &__value {
+        font-size: 40px;
+    }
+
+    &__body {
+        position: relative;
+        display: flex;
+        padding: 4px 0;
+        background: linear-gradient(to right, #C99124 5%, #F6DA67 25%, #F6DA67 80%, #C99124 100%);
+    }
+
+    &__logo {
+        position: absolute;
+        top: 0;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        width: 230px;
+        z-index: 5;
+    }
+
+    &__img {
+        width: 100%;
+        max-height: 240px;
+    }
+
+    &__footer {
+        position: relative;
+        padding: 5px 0;
+        color: white;
+
+        .grad {
+            color: transparent;
+            background: linear-gradient(to right, #C99124 5%, #ecd473 25%, #ecd473 80%, #C99124 100%);
+            background-clip: text;
+            -webkit-background-clip: text;
+        }
+
+        .text {
+            text-align: center;
+            padding: 3px 0;
+            max-width: 85%;
+        }
+
+        .large {
+            font-size: 14px;
+            font-weight: 600;
+            padding: 5px 0;
+        }
+
+        .x-large {
+            font-weight: 900;
+            padding: 5px 0;
+            font-size: 14px;
+        }
+
+        .med {
+            font-size: 14px;
+            padding: 8px 0;
+        }
+        
+        .small {
+            max-width: unset;
+            font-size: 8px;
+        }
+    }
+
+    .floating-img {
+        position: absolute;
     
+        &--1 {
+            top: 45px;
+            left: 15px;
+            width: 35px;
+        }
+    
+        &--2 {
+            bottom: 20px;
+            left: 50px;
+            width: 40px;
+            transform: rotate(50deg);
+        }
+    
+        &--3 {
+            bottom: 20px;
+            right: 130px;
+            width: 40px;
+        }
+    
+        &--4 {
+            bottom: 80px;
+            right: 20px;
+            width: 23px;
+        }
+    
+        &--5 {
+            top: 35px;
+            left: 25px;
+            width: 66px;
+        }
+    
+        &--6 {
+            bottom: 220px;
+            right: 55px;
+            width: 20px;
+        }
+    
+        &--7 {
+            top: 15px;
+            right: 15px;
+            width: 45px;
+        }
+    }
 }
