handle new domain name

--- a/src/assets/scss/cmpnts/_components.scss
+++ b/src/assets/scss/cmpnts/_components.scss
@@ -44,7 +44,7 @@
     width: 100%;
     padding: 30px 30px;
     z-index: 20;
-
+    
     &__logo {
         width: 100px;
     }
@@ -249,7 +249,7 @@
             }
 
             .inner-text {
-                color: $main-red;
+                color: $third-red;
                 font-size: 11px;
                 white-space: nowrap;
                 font-weight: 500;
