--- a/src/assets/scss/pages/_players.scss
+++ b/src/assets/scss/pages/_players.scss
@@ -1,4 +1,5 @@
 .players {
+    padding-top: 70px;
 
     .coca-img {
         margin-top: 30px;
@@ -104,7 +105,7 @@
         }
     
         &--6 {
-            top: 176px;
+            top: 140px;
             right: 10px;
             width: 65px;
         }
