--- a/src/assets/scss/pages/_social.scss
+++ b/src/assets/scss/pages/_social.scss
@@ -43,8 +43,8 @@
         position: absolute;
     
         &--1 {
-            top: 45px;
-            left: 50px;
+            top: 95px;
+            left: 20px;
             width: 30px;
         }
     
@@ -55,7 +55,7 @@
         }
     
         &--3 {
-            top: 30px;
+            top: 35%;
             right: 10px;
             width: 45px;
         }
