--- a/src/assets/scss/pages/_questionOverlay.scss
+++ b/src/assets/scss/pages/_questionOverlay.scss
@@ -37,9 +37,14 @@
 
     .btn-group {
         display: flex;
-        justify-content: space-between;
+        justify-content: space-evenly;
         align-items: center;
         z-index: 10;
+
+        .img-btn {
+            margin-left: 15px;
+            margin-right: 15px; 
+        }
     }
 
     .floating-img {
@@ -58,19 +63,19 @@
         }
     
         &--3 {
-            bottom: 80px;
+            bottom: 120px;
             left: 120px;
             width: 40px;
         }
     
         &--4 {
-            bottom: 45px;
+            bottom: 85px;
             left: 10px;
             width: 120px;
         }
     
         &--5 {
-            bottom: 50px;
+            bottom: 80px;
             right: 20px;
             width: 60px;
             transform: rotate(50deg);
