--- a/src/assets/scss/cmpnts/_components.scss
+++ b/src/assets/scss/cmpnts/_components.scss
@@ -155,6 +155,15 @@
             z-index: 5;
         }
 
+        .shade {
+            position: absolute;
+            bottom: 0;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            width: 50%;
+            z-index: 2;
+        }
+
         .flame {
             position: absolute;
             z-index: 2;
