fixed gamePlay bug

--- a/src/assets/scss/pages/_camera.scss
+++ b/src/assets/scss/pages/_camera.scss
@@ -13,3 +13,10 @@
         object-fit: fill;
     }
 }
+.popup-overlay.next-popup-overlay {
+    background: rgba(black, 0);
+}
+.popup-content.next-popup-content {
+    background-color: transparent;
+    border: none;
+}
