--- a/src/assets/scss/cmpnts/_components.scss
+++ b/src/assets/scss/cmpnts/_components.scss
@@ -27,14 +27,24 @@
         transform: translate(-50%, -50%);
     }
 
+    &--fixed {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 150%;
+        height: 54px;
+        line-height: 1;
+        padding: 8px 10px;
+    }
+
     &--small {
         min-width: unset;
         font-size: 14px;
-        padding: 8px 16px;
+        padding: 8px 15px;
 
         &::before {
-            width: calc(100% - 6px);
-            height: calc(100% - 6px);
+            width: calc(100% - 4px);
+            height: calc(100% - 4px);
         }
     }
 
@@ -43,9 +53,12 @@
     }
 
     &__text {
+        position: relative;
+        font-size: 26px;
         word-break: break-word;
+        z-index: 5;
     }
-
+    
 }
 
 .navbar {
