--- a/src/assets/scss/pages/_score.scss
+++ b/src/assets/scss/pages/_score.scss
@@ -5,6 +5,7 @@
     padding-top: 100px;
 
     &__header {
+        position: relative;
         text-transform: uppercase;
         color: transparent;
         background: linear-gradient(to right, #C99124 5%, #F6DA67 25%, #F6DA67 80%, #C99124 100%);
@@ -12,12 +13,24 @@
         -webkit-background-clip: text;
         font-weight: 900;
         margin-bottom: 60px;
-        font-size: 22px;
+        font-size: 28px;
         text-align: center;
+        z-index: 5;
     }
 
     &__value {
+        position: relative;
+        color: $main-red;
+        background: transparent;
         font-size: 40px;
+
+        &::before {
+            content: attr(title);
+            position: absolute;
+            -webkit-text-stroke: 6px #f0cc2d; /* Chris Coyier's favorite color! */
+            left: 0;
+            z-index: -1;
+        }
     }
 
     &__body {
