start admin page

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -15,6 +15,7 @@
 @import "./pages/winners";
 @import "./pages/prizes";
 @import "./pages/terms";
+@import "./pages/admin";
 @import "./pages/sharetowin";
 @import "./pages/questionOverlay";
 
