--- a/src/assets/scss/pages/_admin.scss
+++ b/src/assets/scss/pages/_admin.scss
@@ -1,3 +1,40 @@
 .admin {
-    padding-top: 100px;
+    // padding-top: 100px;
+}
+
+.users {
+    padding: 100px 20px 0;
+
+    &__header {
+        color: white;
+        width: 100%;
+        margin-bottom: 15px;
+
+        .line {
+            flex: 1;
+            border-top: 1px solid rgba(255, 255, 255, 0.555);
+        }
+        .text {
+            margin: 0 8px;
+            font-size: 18px;
+            font-weight: 500;
+        }
+    }
+
+    &__content {
+        color: white;
+        width: 100%;
+        
+        .header {
+            text-decoration: underline;
+            font-size: 18px;
+            font-size: 500;   
+            margin-bottom: 10px; 
+        }
+
+        .sub-header {
+            font-size: 16px;
+            margin-bottom: 3px;
+        }
+    }
 }
