--- a/src/assets/scss/pages/_admin.scss
+++ b/src/assets/scss/pages/_admin.scss
@@ -1,9 +1,10 @@
 .admin {
     // padding-top: 100px;
+    box-sizing: border-box;
 }
 
 .users {
-    padding: 100px 20px 0;
+    padding: 100px 20px 50px;
 
     &__header {
         color: white;
