--- a/src/assets/scss/pages/_camera.scss
+++ b/src/assets/scss/pages/_camera.scss
@@ -2,7 +2,7 @@
     position: relative;
     min-height: 100vh;
     min-width: 320px;
-    max-width: 768px;
+    // max-width: 768px;
     margin: 0 auto;
     overflow: hidden;
 
