--- a/src/assets/scss/pages/_score.scss
+++ b/src/assets/scss/pages/_score.scss
@@ -36,7 +36,7 @@
     &__body {
         position: relative;
         display: flex;
-        padding: 4px 0;
+        padding: 4px 0 0px;
         background: linear-gradient(to right, #C99124 5%, #F6DA67 25%, #F6DA67 80%, #C99124 100%);
     }
 
