add more admin functionalities & fix broken link on share page

--- a/src/assets/scss/pages/_camera.scss
+++ b/src/assets/scss/pages/_camera.scss
@@ -13,6 +13,11 @@
         object-fit: fill;
     }
 }
+
+.simple-camera {
+    max-width: 768px;
+}
+
 .popup-overlay.next-popup-overlay {
     background: rgba(black, 0);
 }
