--- a/src/assets/scss/pages/_admin.scss
+++ b/src/assets/scss/pages/_admin.scss
@@ -1,10 +1,9 @@
 .admin {
-    // padding-top: 100px;
+    padding: 100px 20px 50px;
     box-sizing: border-box;
 }
 
 .users {
-    padding: 100px 20px 50px;
 
     &__header {
         color: white;
@@ -41,11 +40,22 @@
 }
 
 .popup-overlay .ques-popup-content {
-    max-width: 600px;
+    max-width: 500px;
     padding: 15px 20px; 
 }
 
 .popup-overlay .ques-modal {
+    .header {
+        display: inline-block;
+        text-align: center;
+        margin-bottom: 12px;
+        color: transparent;
+        background: linear-gradient(to right, #C99124 5%, #F6DA67 25%, #F6DA67 80%, #C99124 100%);
+        background-clip: text;
+        -webkit-background-clip: text;
+        text-transform: uppercase;
+    }
+
     .input {
         padding: 3px 5px;
         line-height: 1.4;
@@ -66,17 +76,32 @@
         margin: 10px 0 15px;
     }
 
+    .text {
+        margin: 5px 0 15px;
+        font-size: 18px;
+    }
+
     .actions {
+        
         &__btn {
             background: white;
-            padding: 5px 8px;
+            padding: 5px 15px;
             border: none;
-            border-radius: 5px;
+            font-weight: 600;
+            font-size: 16px;
+            border-radius: 3px;
             cursor: pointer;
             
             &:first-child {
                 margin-right: 8px;
             }
         }
+    }
+
+    .cancel {
+        margin-right: 15px;
+        font-weight: 500;
+        font-size: 16px;
+        cursor: pointer;
     }
 }
