upload video and share to facebook

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -18,6 +18,7 @@
 @import "./pages/admin";
 @import "./pages/sharetowin";
 @import "./pages/questionOverlay";
+@import "./pages/dashboard";
 
 @import "./cmpnts/components";
 @import "./cmpnts/table";
