--- a/src/assets/scss/pages/_score.scss
+++ b/src/assets/scss/pages/_score.scss
@@ -54,6 +54,21 @@
         max-height: 280px;
     }
 
+    .media {
+        display: flex;
+        width: 100%;
+
+        .split {
+            width: 50%;
+        }
+    }
+
+    &__video {
+        width: 100%;
+        height: 280px;
+        object-fit: cover;
+    }
+
     &__footer {
         position: relative;
         padding: 5px 0;
