--- a/src/assets/scss/pages/_login.scss
+++ b/src/assets/scss/pages/_login.scss
@@ -150,6 +150,7 @@
 
 
 .popup-overlay .popup-content {
+    position: relative;
     background-color: #292d3e;
     border: 1px solid #464545;
     color: #fff;
@@ -157,6 +158,11 @@
     padding-top: 15px;
     padding-bottom: 15px;
     max-width: 270px;
+}
+
+.popup-overlay .welcome-content {
+    width: 85%;
+    padding: 15px 12px;
 }
 
 .popup-overlay .modal {
@@ -172,8 +178,25 @@
         flex-direction: column;
     }
 
+    &__close {
+        position: absolute;
+        top: 0;
+        right: 0;
+        transform: translate(50%, -50%);
+        border-radius: 50%;
+        background: rgba(white, .5);
+        width: 20px;
+        height: 20px;
+        font-size: 18px;
+        border: none;
+    }
+
     .content {
         text-align: center;
+    }
+
+    .text:first-child {
+        margin-bottom: 8px;
     }
 
     .actions {
@@ -181,6 +204,20 @@
         width: 100%;
         display: flex;
         justify-content: space-evenly;
+       
+        &__btn {
+            background: white;
+            padding: 5px 15px;
+            border: none;
+            font-weight: 600;
+            font-size: 16px;
+            border-radius: 3px;
+            cursor: pointer;
+            
+            &:first-child {
+                margin-right: 8px;
+            }
+        }
     }
 
     .button {
