--- a/src/assets/scss/pages/_camera.scss
+++ b/src/assets/scss/pages/_camera.scss
@@ -12,6 +12,14 @@
         height: 100%;
         object-fit: fill;
     }
+
+    &-input {
+        position: absolute;
+        bottom: 50px;
+        left: 50%;
+        // transform: translateX(-50%);
+        z-index: 50;
+    }
 }
 
 .simple-camera {
