--- a/src/assets/scss/cmpnts/_components.scss
+++ b/src/assets/scss/cmpnts/_components.scss
@@ -233,7 +233,8 @@
             background-color: white;
             padding: 5px 10px;
             box-shadow: 0 0 5px rgba(black, 0.2);
-
+            z-index: 5;
+            
             &::before {
                 content: "";
                 position: absolute;
