--- a/src/assets/scss/pages/_score.scss
+++ b/src/assets/scss/pages/_score.scss
@@ -1,3 +1,9 @@
+.ht2can {
+    background: url(../../img/bg.png);
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
 .score {
     display: flex;
     flex-direction: column;
@@ -12,6 +18,7 @@
         background-clip: text;
         -webkit-background-clip: text;
         font-weight: 900;
+        margin-top: 10px;
         margin-bottom: 60px;
         font-size: 28px;
         text-align: center;
@@ -80,6 +87,7 @@
             background: linear-gradient(to right, #C99124 5%, #ecd473 25%, #ecd473 80%, #C99124 100%);
             background-clip: text;
             -webkit-background-clip: text;
+            text-decoration: none;
         }
 
         .text {
