--- a/src/assets/scss/pages/_camera.scss
+++ b/src/assets/scss/pages/_camera.scss
@@ -2,6 +2,7 @@
     position: relative;
     min-height: 100vh;
     min-width: 320px;
+    width: 100%;
     // max-width: 768px;
     margin: 0 auto;
     overflow: hidden;
@@ -10,7 +11,8 @@
         position: absolute;
         width: 100%;
         height: 100%;
-        object-fit: fill;
+        object-fit: cover;
+        object-position: center;
     }
 
     &-input {
