--- a/src/assets/scss/pages/_camera.scss
+++ b/src/assets/scss/pages/_camera.scss
@@ -1,6 +1,7 @@
 .camera {
     position: relative;
     min-height: 100vh;
+    max-height: 100vh;
     min-width: 320px;
     width: 100%;
     // max-width: 768px;
@@ -11,7 +12,7 @@
         position: absolute;
         width: 100%;
         height: 100%;
-        object-fit: cover;
+        object-fit: fill;
         object-position: center;
     }
 
