--- a/src/assets/scss/pages/_score.scss
+++ b/src/assets/scss/pages/_score.scss
@@ -1,4 +1,5 @@
 .ht2can {
+    width: 100%;
     background: url(../../img/bg.png);
     background-size: cover;
     background-repeat: no-repeat;
@@ -34,7 +35,7 @@
         &::before {
             content: attr(title);
             position: absolute;
-            -webkit-text-stroke: 6px #f0cc2d; /* Chris Coyier's favorite color! */
+            -webkit-text-stroke: 6px #f0cc2d;
             left: 0;
             z-index: -1;
         }
@@ -43,7 +44,7 @@
     &__body {
         position: relative;
         display: flex;
-        padding: 4px 0 0px;
+        padding: 4px 0 3px;
         background: linear-gradient(to right, #C99124 5%, #F6DA67 25%, #F6DA67 80%, #C99124 100%);
     }
 
@@ -57,7 +58,7 @@
     }
 
     &__img {
-        width: 100%;
+        width: 50%;
         min-height: 200px;
         max-height: 280px;
     }
