--- a/src/assets/scss/pages/_camera.scss
+++ b/src/assets/scss/pages/_camera.scss
@@ -14,6 +14,14 @@
         height: 100%;
         object-fit: fill;
         object-position: center;
+        z-index: 2;
+    }
+
+    &__img {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        z-index: 1;
     }
 
     &-input {
