admin logout & question & gif delay calculated for 10 second duration

--- a/src/assets/scss/pages/_login.scss
+++ b/src/assets/scss/pages/_login.scss
@@ -70,7 +70,8 @@
             font-size: 18px;
             padding: 0 5px;
             font-weight: 500;
-
+            border: none;
+            
             &--phone {
                 border: none;
                 outline: none;
