--- a/src/assets/scss/cmpnts/_components.scss
+++ b/src/assets/scss/cmpnts/_components.scss
@@ -100,6 +100,7 @@
         text-decoration: none;
         transition: all 0.2s;
         outline: none;
+        cursor: pointer;
 
         &:hover,
         &:active {
