Dec 20 changes from issue slide

--- a/src/assets/scss/pages/_admin.scss
+++ b/src/assets/scss/pages/_admin.scss
@@ -4,7 +4,6 @@
 }
 
 .users {
-
     &__header {
         color: white;
         width: 100%;
@@ -37,11 +36,54 @@
             margin-bottom: 3px;
         }
     }
+
+    &__weeks {
+        margin-bottom: 15px;
+
+        .img-btn:not(:last-child) {
+            margin-right: 3px;
+        }
+    }
+
+    .add-btn {
+        background: white;
+        padding: 5px 15px;
+        border: none;
+        font-weight: 600;
+        font-size: 16px;
+        border-radius: 3px;
+        color: $third-red;
+        transition: transform .1s ease-out;
+        cursor: pointer;
+
+        &:active {
+            transform: translateY(1px) scale(.98);
+        }
+    }
+
+    .table {
+        margin-bottom: 10px;
+        
+        &__cell {
+            font-size: 14px;
+        }
+    
+        &__header &__cell {
+            font-size: 16px;
+        }
+    }
+
+    .nowinners {
+        align-self: center;
+        font-size: 18px;
+        font-weight: 300;
+        margin: 10px 0;
+    }
 }
 
 .popup-overlay .ques-popup-content {
     max-width: 500px;
-    padding: 15px 20px; 
+    padding: 15px 20px;
 }
 
 .popup-overlay .ques-modal {
@@ -50,7 +92,7 @@
         text-align: center;
         margin-bottom: 12px;
         color: transparent;
-        background: linear-gradient(to right, #C99124 5%, #F6DA67 25%, #F6DA67 80%, #C99124 100%);
+        background: linear-gradient(to right, #c99124 5%, #f6da67 25%, #f6da67 80%, #c99124 100%);
         background-clip: text;
         -webkit-background-clip: text;
         text-transform: uppercase;
@@ -60,7 +102,7 @@
         padding: 3px 5px;
         line-height: 1.4;
         outline: none;
-        // font-size: 18px; \      
+        font-size: 15px;
     }
 
     .que-input {
@@ -70,10 +112,11 @@
         font-size: 18px;
         padding: 0 5px;
         font-weight: 500;
+        margin-bottom: 5px;
     }
 
     .choices {
-        margin: 10px 0 15px;
+        margin: 5px 0 15px;
         flex-wrap: wrap;
     }
 
@@ -83,7 +126,6 @@
     }
 
     .actions {
-        
         &__btn {
             background: white;
             padding: 5px 15px;
@@ -92,7 +134,7 @@
             font-size: 16px;
             border-radius: 3px;
             cursor: pointer;
-            
+
             &:first-child {
                 margin-right: 8px;
             }
