--- a/src/assets/scss/pages/_welcome.scss
+++ b/src/assets/scss/pages/_welcome.scss
@@ -12,6 +12,7 @@
         color: white;
         font-size: 24px;
         margin-bottom: 25px;
+        z-index: 5;
     }
     &__text {
         color: white;
@@ -20,6 +21,7 @@
         margin-bottom: 30px;
         text-align: center;
         max-width: 340px;
+        z-index: 5;
     }
 
     .floating-img {
