Use portal for gameplay popups, admin users show score and links, tiger images preload

--- a/src/assets/scss/base/_base.scss
+++ b/src/assets/scss/base/_base.scss
@@ -33,3 +33,11 @@ body {
     background: url(../../img/flower.png);
     background-size: 100% 100%;
 }
+
+.dot-cork {
+    width:35px;
+    height:35px;
+    position:absolute;
+    background: url(../../img/cork.png);
+    background-size: 100% 100%;
+}
