--- a/src/assets/scss/pages/_admin.scss
+++ b/src/assets/scss/pages/_admin.scss
@@ -86,6 +86,11 @@
     padding: 15px 20px;
 }
 
+.popup-overlay .users-popup-content {
+    min-width: 868px;
+    padding: 15px 20px;
+}
+
 .popup-overlay .ques-modal {
     .header {
         display: inline-block;
