--- a/src/assets/scss/pages/_login.scss
+++ b/src/assets/scss/pages/_login.scss
@@ -183,13 +183,15 @@
         position: absolute;
         top: 0;
         right: 0;
-        transform: translate(50%, -50%);
+        // transform: translate(50%, -50%);
+        // // background: rgba(white, .5);
+        border: none;
         border-radius: 50%;
-        background: rgba(white, .5);
         width: 20px;
         height: 20px;
-        font-size: 18px;
-        border: none;
+        font-size: 20px;
+        font-weight: 600;
+        cursor: pointer;
     }
 
     .content {
