--- a/src/assets/scss/pages/_admin.scss
+++ b/src/assets/scss/pages/_admin.scss
@@ -130,26 +130,30 @@
         font-size: 18px;
     }
 
-    .actions {
-        &__btn {
-            background: white;
-            padding: 5px 15px;
-            border: none;
-            font-weight: 600;
-            font-size: 16px;
-            border-radius: 3px;
-            cursor: pointer;
-
-            &:first-child {
-                margin-right: 8px;
-            }
-        }
-    }
-
     .cancel {
         margin-right: 15px;
         font-weight: 500;
         font-size: 16px;
         cursor: pointer;
+    }
+}
+
+.actions {
+    &__btn {
+        background: white;
+        padding: 5px 15px;
+        border: none;
+        font-weight: 600;
+        font-size: 16px;
+        border-radius: 3px;
+        cursor: pointer;
+
+        &:first-child {
+            margin-right: 8px;
+        }
+    }
+    a {
+        color: #333;
+        text-decoration: none;
     }
 }
