add back to home button on gameplay end and share link text on share to whatsapp / copy link page

--- a/src/assets/scss/cmpnts/_components.scss
+++ b/src/assets/scss/cmpnts/_components.scss
@@ -157,6 +157,15 @@
     }
 }
 
+.ackno-back {
+    position: absolute;
+    bottom: 10%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    padding: 3px;
+    min-width: 220px;
+}
+
 #popup-root .ackno-popup-overlay {
     background: rgba(black, 0);
 
