--- a/src/assets/scss/pages/_social.scss
+++ b/src/assets/scss/pages/_social.scss
@@ -25,6 +25,17 @@
         -webkit-background-clip: text;
     }
 
+    &__text {
+        color: transparent;
+        text-align: center;
+        margin-top: 35px;
+        max-width: 320px;
+        font-size: 14px;
+        background: linear-gradient(to right, #C99124 5%, #F6DA67 25%, #F6DA67 80%, #C99124 100%);
+        background-clip: text;
+        -webkit-background-clip: text;
+    }
+
     .link {
         transition: transform .2s ease-out;
         &:first-child {
